@@ -1,6 +1,7 @@
 <b>Version 2.2.3:</b><br/><br/>
-    &#8226; Small reported bug fixes<br/>
-    &#8226; Some crash fixes<br/>
+    &#8226; Choice of which page to open a tweet to (under Timeline Settings)<br/>
+    &#8226; Lots of small reported bug fixes<br/>
+    &#8226; Some more crash fixes<br/>
 </br><br/>
 
 <b>Version 2.2.3:</b><br/><br/>
